Adding integ test for index alias scenario
Signed-off-by: Martin Gaievski <gaievski@amazon.com>